2002-03-29  Richard Williamson  <rjw@apple.com>

        More fixes for cancelling.  Fixed some code that appears to have been
        mis-merged after the KDE 3 beta 2 landing.
        
	* src/kwq/KWQKloader.mm: (-[URLLoadClient initWithLoader:dataSource:])

2002-03-29  Darin Adler  <darin@apple.com>

	* src/kwq/KWQKloader.mm: (Cache::getStatistics), (Cache::flushAll):
        Fix both of these to work when cache is not yet allocated.

2002-03-29  Richard Williamson  <rjw@apple.com>

        Hooked up redirect.
        
	* src/kwq/KWQKloader.mm: (-[URLLoadClient IFURLHandle:didRedirectToURL:]):
	* src/kwq/external.h:

2002-03-29  Kenneth Kocienda  <kocienda@apple.com>

        Workaround for Radar 2890624 (Double free of image data in QPixmap)
        This hack is necessary for the app to run on some Jaguar system. Otherwise
        images that the GIF library cannot decode will cause a crash.
        
	* src/kwq/KWQPixmap.mm: (QPixmap::QPixmap):

2002-03-28  Richard Williamson  <rjw@apple.com>

        Fixed basic font horkage caused by removal of KDE font matching code.  We
        now work correctly for the basic font families.
        
	* src/kwq/KWQFont.mm: (QFont::getFont):

2002-03-28  Darin Adler  <darin@apple.com>

	* src/kwq/KWQKloader.mm: (Cache::requestImage), (Cache::requestStyleSheet),
	(Cache::requestScript): Set flags so the objects get freed when they are done
        in cases where the cache is disabled.

2002-03-28  Maciej Stachowiak  <mjs@apple.com>

	Fix Radar 2890340 (JavaScript doesn't work)

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::executeScript): Implement
	the other overloaded version of this function. This is needed for
	JavaScript to work.

2002-03-28  Darin Adler  <darin@apple.com>

	* src/kdelibs/khtml/misc/loader.h: Added API for looking at the contents of the
        cache, flushing the cache, and disabling the cache.
	* src/kwq/KWQKloader.mm: (Cache::requestImage): Don't cache if disabled.