@@ -345,8 +345,19 @@ bool RenderImage::nodeAtPoint(NodeInfo& info, int _x, int _y, int _tx, int _ty)
 void RenderImage::updateFromElement()
 {
     assert(element());
+#ifdef APPLE_CHANGES
+    // Treat a lack of src or empty string for src as no image at all, not the page itself
+    // loaded as an image.
+    DOMString attr = element()->getAttribute(ATTR_SRC);
+    CachedImage *new_image;
+    if (attr.isEmpty())
+        new_image = NULL;
+    else
+        new_image = element()->getDocument()->docLoader()->requestImage(khtml::parseURL(attr));
+#else
     CachedImage *new_image = element()->getDocument()->docLoader()->
                              requestImage(khtml::parseURL(element()->getAttribute(ATTR_SRC)));
+#endif
 
     if(new_image && new_image != image) {
         loadEventSent = false;
